RR V3 Harvester with deprecated MarcRecord