@@ -1,30 +1,19 @@
 package dk.dbc.dataio.harvester.types;
 
 import dk.dbc.marc.binding.MarcRecord;
+import dk.dbc.marc.reader.JsonReader;
 import dk.dbc.marc.reader.MarcReaderException;
-import dk.dbc.marc.reader.MarcXchangeV1Reader;
-import dk.dbc.marc.writer.MarcXchangeV1Writer;
+import dk.dbc.marc.writer.JsonWriter;
+import dk.dbc.marc.writer.MarcWriterException;
 
-import java.io.BufferedInputStream;
 import java.io.ByteArrayInputStream;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
-/**
- * This class represents a MARC Exchange Collection as a harvester XML record.
- * <p>
- * This class is not thread safe.
- */
-public class MarcExchangeCollection implements HarvesterRecord {
-    private final Charset charset = StandardCharsets.UTF_8;
-    private final List<MarcRecord> records;
-
-    public MarcExchangeCollection() {
-        this.records = new ArrayList<>();
-    }
+public class MarcJSonCollection implements HarvesterRecord {
+    private final List<MarcRecord> records = new ArrayList<>();
 
     /**
      * @return this MARC Exchange Collections XML representation as byte array
@@ -35,14 +24,22 @@ public class MarcExchangeCollection implements HarvesterRecord {
         if (records.isEmpty()) {
             throw new HarvesterInvalidRecordException("Empty marcXchange collection");
         }
-        return new MarcXchangeV1Writer().writeCollection(records, charset);
+        try {
+            return new JsonWriter().writeCollection(records, getCharset());
+        } catch (MarcWriterException e) {
+            throw new HarvesterException(e);
+        }
     }
 
     /**
      * @return an empty collection, only containing the outer wrapper elements for the collection
      */
-    public byte[] emptyCollection() {
-        return new MarcXchangeV1Writer().writeCollection(Collections.emptyList(), charset);
+    public byte[] emptyCollection() throws HarvesterException {
+        try {
+            return new JsonWriter().writeCollection(List.of(), getCharset());
+        } catch (MarcWriterException e) {
+            throw new HarvesterException(e);
+        }
     }
 
     /**
@@ -50,7 +47,7 @@ public class MarcExchangeCollection implements HarvesterRecord {
      */
     @Override
     public Charset getCharset() {
-        return charset;
+        return StandardCharsets.UTF_8;
     }
 
     /**
@@ -62,29 +59,22 @@ public class MarcExchangeCollection implements HarvesterRecord {
      *                                         if given byte array can not be parsed as marcXchange,
      *                                         if given memberData is itself a collection with more than one record.
      */
-    @Override
     public void addMember(byte[] memberData) throws HarvesterException {
         if (memberData == null) {
             throw new HarvesterInvalidRecordException("member data can not be null");
         }
         try {
-            final MarcXchangeV1Reader marcReader = new MarcXchangeV1Reader(
-                    new BufferedInputStream(
-                            new ByteArrayInputStream(memberData)), charset);
-            final MarcRecord record = marcReader.read();
-            if (record == null) {
-                throw new HarvesterInvalidRecordException("No marcXchange record found");
-            }
+            JsonReader reader = new JsonReader(new ByteArrayInputStream(memberData));
+
+            MarcRecord record = reader.read();
+            if (record == null) throw new HarvesterInvalidRecordException("No marcXchange record found");
             records.add(record);
-            if (marcReader.read() != null) {
-                throw new HarvesterInvalidRecordException("Given collection contains more than one record");
-            }
+            if (reader.read() != null) throw new HarvesterInvalidRecordException("Given collection contains more than one record");
         } catch (MarcReaderException e) {
             throw new HarvesterInvalidRecordException("member data can not be parsed as marcXchange", e);
         }
     }
 
-    @Override
     public List<MarcRecord> getRecords() {
         return records;
     }
